created platform divs, trying to assign background img

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div id="gameGui">
-        <div class="Platformw3"></div>
-
+        <!-- <div class="Platformw3"></div> -->
+         
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
